[package]

name = "apns"
version = "0.2.0"
authors = ["Mach <back2mach@gmail.com>"]
description = "Library for Apple Push Notification Service."
homepage = "https://github.com/back2mach/apns"
repository = "https://github.com/back2mach/apns"
readme = "README.md"
keywords = ["apns", "apple", "push", "notification"]
license = "Apache-2.0"

[lib]

name = "apns"

[dependencies]

num = "~0.1"
openssl = "~0.9"
byteorder = "~0.4"
rustc-serialize = "~0.3"
rand = "~0.3"
quick-error = "^0.1"
